--- a/app/views/irm/my_info/edit.html.erb
+++ b/app/views/irm/my_info/edit.html.erb
@@ -32,72 +32,87 @@
         <tbody>
             <tr>
               <td class="labelCol"><label><%=t(:label_irm_identity_login_name)%></label></td>
-              <td class="dataCol"><%= @person.login_name %></td>
-              <td class="labelCol"><label><%=t(:label_irm_role)%></label></td>
-              <td class="dataCol"><%= @person.role_name %></td>
+              <td class="dataCol"><%= @person.login_name%></td>
+              <td class="labelCol"><label><%=(t :label_irm_person_role)%></label></td>
+              <td class="dataCol"><%=@person[:role_name]%></td>
             </tr>
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_person_email_address)%></label></td>
               <td class="dataCol"><%=f.text_field :email_address, :required=>true%></td>
-              <td class="labelCol"><label><%=(t :label_irm_profile)%></label></td>
-              <td class="dataCol"><%= @person.profile_name%></td>
+              <td class="labelCol"><label><%=t(:label_irm_person_profile)%></label></td>
+              <td class="dataCol"><%=@person[:profile_name]%></td>
             </tr>
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_person_last_name)%></label></td>
               <td class="dataCol"><%=f.text_field :last_name%></td>
-              <td class="labelCol"><%= t(:label_irm_identity_language_code) %></td>
-              <td class="dataCol"><%= f.select(:language_code, selectable_languages) %></td>
+              <td class="labelCol"><label><%=t(:label_irm_person_organization)%></label></td>
+              <td class="dataCol"><%= @person[:organization_name] %></td>
             </tr>
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_person_first_name)%></label></td>
               <td class="dataCol"><%=f.text_field :first_name, :required=>true%></td>
+              <td class="labelCol"><label><%=(t :label_irm_person_region_code)%></label></td>
+              <td class="dataCol"><%=@person[:region_name]%></td>
             </tr>
             <tr>
               <td class="labelCol"><%=(t :label_irm_person_title)%></td>
               <td class="dataCol">
                 <%=f.select :title,options_for_select(person_title,@person.title),
                                                     {},{:required=>true,:id=>"irm_person_title"}%></td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
-    <div id="head_2_ep" class="pbSubheader first tertiaryPalette">
-      <h3><%=t(:label_irm_person_other_info)%></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-             <tr>
-                 <td class="labelCol"><label><%=t(:label_irm_person_mobile_phone)%></label></td>
-                 <td class="dataCol">
-                   <%=f.text_field :mobile_phone%>
-                 </td>
-                 <td class="labelCol"><label><%=t(:label_irm_person_home_address)%></label></td>
-                 <td class="dataCol">
-                   <%=f.text_field :home_address%>
-                 </td>
-             </tr>
-             <tr>
-                 <td class="labelCol"><label><%=t(:label_irm_person_home_phone)%></label></td>
-                 <td class="dataCol">
-                   <%=f.text_field :home_phone%>
-                 </td>
-                 <td class="labelCol"><label><%=t(:label_irm_person_fax_number)%></label></td>
-                 <td class="dataCol">
-                   <%=f.text_field :fax_number%>
-                 </td>
-             </tr>
 
-             <tr>
-                <td class="labelCol"><label><%=t(:label_irm_person_bussiness_phone)%></label></td>
-                 <td class="dataCol">
-                   <%=f.text_field :bussiness_phone%>
-                 </td>
-                 <td class="labelCol">
+              <td class="labelCol"><label><%=(t :label_irm_person_site_group_code)%></label></td>
+
+              <td class="dataCol"><%= @person[:site_group_name] %></td>
+            </tr>
+            <tr>
+              <td class="labelCol"><%= t(:label_irm_identity_language_code) %></td>
+              <td class="dataCol"><%= f.select(:language_code, selectable_languages) %></td>
+              <td class="labelCol"><label><%=(t :label_irm_person_site_code)%></label></td>
+              <td class="dataCol"><%= @person[:site_name]%></td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label><%=t(:label_irm_person_notification_lang)%></label></td>
+              <td class="dataCol"><%=f.select :notification_lang,selectable_languages%></td>
+              <td class="labelCol"><label><%=t(:label_irm_person_bussiness_phone)%></label></td>
+              <td class="dataCol">
+                <%=f.text_field :bussiness_phone,:required=>true%>
+              </td>
+            </tr>
+            <tr>
+               <td class="labelCol">
                  <label><%=t(:label_irm_person_notification_flag)%></label>
                </td>
                <td class="dataCol"><%=f.check_box :notification_flag,:checked => true%></td>
-             </tr>
+               <td class="labelCol"><label><%=t(:label_irm_person_fax_number)%></label></td>
+               <td class="dataCol">
+                   <%=f.text_field :fax_number%>
+               </td>
+            </tr>
+            <tr>
+               <td class="labelCol"><label><%=t(:label_irm_person_vip_flag)%></label></td>
+               <td class="dataCol"><%=check_img(@person.vip_flag)%></td>
+               <td class="labelCol"><label><%=t(:label_irm_person_mobile_phone)%></label></td>
+               <td class="dataCol">
+                 <%=f.text_field :mobile_phone%>
+               </td>
+
+            </tr>
+            <tr>
+              <td class="labelCol"><label><%=t(:label_irm_person_assignment_availability_flag)%></label></td>
+              <td class="dataCol"><%=check_img(@person.assignment_availability_flag)%></td>
+              <td class="labelCol"><label><%=t(:label_irm_person_home_phone)%></label></td>
+              <td class="dataCol">
+                <%=f.text_field :home_phone%>
+              </td>
+            </tr>
+            <tr>
+              <td class="labelCol"></td>
+              <td class="dataCol"></td>
+              <td class="labelCol"><label><%=t(:label_irm_person_home_address)%></label></td>
+              <td class="dataCol">
+                 <%=f.text_field :home_address%>
+              </td>
+            </tr>
         </tbody>
       </table>
     </div>
