--- a/app/views/irm/my_info/index.html.erb
+++ b/app/views/irm/my_info/index.html.erb
@@ -25,114 +25,91 @@
         <tbody>
             <tr>
               <td class="labelCol"><label><%=t(:label_irm_identity_login_name)%></label></td>
-              <td class="dataCol"><%= @person.login_name %></td>
-              <td class="labelCol"><label><%=t(:label_irm_role)%></label></td>
-              <td class="dataCol"><%= @person.role_name %></td>
+              <td class="dataCol"><%= @person.login_name%></td>
+              <td class="labelCol"><label><%=(t :label_irm_person_role)%></label></td>
+              <td class="dataCol"><%=@person[:role_name]%></td>
             </tr>
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_person_email_address)%></label></td>
-              <td class="dataCol"><%= @person.email_address%></td>
-              <td class="labelCol"><label><%=(t :label_irm_profile)%></label></td>
-              <td class="dataCol"><%= @person.profile_name%></td>
+              <td class="dataCol"><%=@person.email_address%></td>
+              <td class="labelCol"><label><%=t(:label_irm_person_profile)%></label></td>
+              <td class="dataCol"><%=@person[:profile_name]%></td>
             </tr>
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_person_last_name)%></label></td>
               <td class="dataCol"><%=@person.last_name%></td>
-              <td class="labelCol"><%= t(:label_irm_identity_language_code) %></td>
-              <td class="dataCol"><%= @person[:language_description] %></td>
+              <td class="labelCol"><label><%=t(:label_irm_person_organization)%></label></td>
+              <td class="dataCol"><%= @person[:organization_name] %></td>
             </tr>
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_person_first_name)%></label></td>
               <td class="dataCol"><%=@person.first_name%></td>
-              <td class="labelCol"><label><%=(t :label_irm_identity_last_login_at)%></label></td>
-              <td class="dataCol"><%=@person.last_login_at%></td>
+              <td class="labelCol"><label><%=(t :label_irm_person_region_code)%></label></td>
+              <td class="dataCol"><%=@person[:region_name]%></td>
             </tr>
             <tr>
               <td class="labelCol"><%=(t :label_irm_person_title)%></td>
               <td class="dataCol">
-                <%= @person.title_name %></td>
+                <%=@person[:title_name]%></td>
+
+              <td class="labelCol"><label><%=(t :label_irm_person_site_group_code)%></label></td>
+
+              <td class="dataCol"><%= @person[:site_group_name] %></td>
+            </tr>
+            <tr>
+              <td class="labelCol"><%= t(:label_irm_identity_language_code) %></td>
+              <td class="dataCol"><%= @person[:language_description] %></td>
+              <td class="labelCol"><label><%=(t :label_irm_person_site_code)%></label></td>
+              <td class="dataCol"><%= @person[:site_name]%></td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label><%=t(:label_irm_person_notification_lang)%></label></td>
+              <td class="dataCol"><%=@person[:notification_lang_description]%></td>
+              <td class="labelCol"><label><%=t(:label_irm_person_bussiness_phone)%></label></td>
+              <td class="dataCol">
+                <%=@person.bussiness_phone%>
+              </td>
+            </tr>
+            <tr>
+               <td class="labelCol">
+                 <label><%=t(:label_irm_person_notification_flag)%></label>
+               </td>
+               <td class="dataCol"><%=check_img(@person.notification_flag)%></td>
+               <td class="labelCol"><label><%=t(:label_irm_person_fax_number)%></label></td>
+               <td class="dataCol">
+                   <%=@person.fax_number%>
+               </td>
+            </tr>
+            <tr>
+               <td class="labelCol"><label><%=t(:label_irm_person_vip_flag)%></label></td>
+               <td class="dataCol"><%=check_img(@person.vip_flag)%></td>
+               <td class="labelCol"><label><%=t(:label_irm_person_mobile_phone)%></label></td>
+               <td class="dataCol">
+                 <%=@person.mobile_phone%>
+               </td>
+
+            </tr>
+            <tr>
+              <td class="labelCol"><label><%=t(:label_irm_person_assignment_availability_flag)%></label></td>
+              <td class="dataCol"><%=check_img(@person.assignment_availability_flag)%></td>
+              <td class="labelCol"><label><%=t(:label_irm_person_home_phone)%></label></td>
+              <td class="dataCol">
+                <%=@person.home_phone%>
+              </td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label><%=(t :label_irm_person_template_flag)%></label></td>
+              <td class="dataCol"><div><%=check_img(@person.is_a?(Irm::TemplatePerson) ? "Y":"N")%></div></td>
+              <td class="labelCol"><label><%=t(:label_irm_person_home_address)%></label></td>
+              <td class="dataCol">
+                 <%=@person.home_address%>
+              </td>
             </tr>
         </tbody>
       </table>
     </div>
   </div>
   <div class="pbBody">
-    <div id="head_2_ep" class="pbSubheader first tertiaryPalette">
-      <h3><%=t(:label_irm_person_other_info)%></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-             <tr>
-                 <td class="labelCol"><label><%=t(:label_irm_person_company)%></label></td>
-                 <td class="dataCol"><%=@person[:company_name]%></td>
-                  <td class="labelCol"><label><%=(t :label_irm_person_region_code)%></label></td>
-                  <td class="dataCol"><%=@person[:region_name]%></td>
-             </tr>
-             <tr>
-             <td class="labelCol"><label><%=t(:label_irm_person_organization)%></label></td>
-             <td class="dataCol"><%=@person[:organization_name] %></td>
-             <td class="labelCol"><label><%=(t :label_irm_person_site_group_code)%></label></td>
-
-             <td class="dataCol"><%= @person[:site_group_name] %></td>
-             </tr>
-             <tr>
-                 <td class="labelCol"></td>
-                 <td class="dataCol"></td>
-
-               <td class="labelCol"><label><%=(t :label_irm_person_site_code)%></label></td>
-                 <td class="dataCol"><%= @person[:site_name] %></td>
-             </tr>
-             <tr>
-                 <td class="labelCol"><label><%=t(:label_irm_person_mobile_phone)%></label></td>
-                 <td class="dataCol">
-                   <%=@person.mobile_phone%>
-                 </td>
-                 <td class="labelCol"><label><%=t(:label_irm_person_home_address)%></label></td>
-                 <td class="dataCol">
-                   <%=@person.home_address%>
-                 </td>
-             </tr>
-             <tr>
-                 <td class="labelCol"><label><%=t(:label_irm_person_vip_flag)%></label></td>
-                 <td class="dataCol"><%=check_img(@person.vip_flag)%></td>
-                 <td class="labelCol"><label><%=t(:label_irm_person_home_phone)%></label></td>
-                 <td class="dataCol">
-                   <%=@person.home_phone%>
-                 </td>
-             </tr>
-             <tr>
-                 <td class="labelCol"><label>
-                     <%=t(:label_irm_person_assignment_availability_flag)%></label></td>
-                 <td class="dataCol"><%=check_img(@person.assignment_availability_flag)%></td>
-                 <td class="labelCol"><label><%=t(:label_irm_person_fax_number)%></label></td>
-                 <td class="dataCol">
-                   <%=@person.fax_number%>
-                 </td>
-
-             </tr>
-             <tr>
-               <td class="labelCol"><label>
-                     <%=t(:label_irm_person_unrestricted_access_flag)%></label></td>
-                <td class="dataCol"><%=check_img(@person.unrestricted_access_flag)%></td>
-                <td class="labelCol"><label><%=t(:label_irm_person_bussiness_phone)%></label></td>
-                 <td class="dataCol">
-                   <%=@person.bussiness_phone%>
-                 </td>
-
-             </tr>
-             <tr>
-               <td class="labelCol"></td>
-               <td class="dataCol"></td>
-               <td class="labelCol">
-                 <label><%=t(:label_irm_person_notification_flag)%></label>
-               </td>
-               <td class="dataCol"><%=check_img(@person.notification_flag)%></td>
-
-             </tr>
-        </tbody>
-      </table>
-    </div>
     <div id="head_3_ep" class="pbSubheader first tertiaryPalette">
       <h3><%=t(:label_irm_person_approve_info)%></h3>
     </div>
@@ -158,42 +135,6 @@
 
   </div>
 
-</div>
-
-<div id="id_person_company_access" class="bRelatedList">
-    <a name="id_person_company_access_target">
-    </a>
-    <div class="listRelatedObject taskBlock">
-      <div class="bPageBlock secondaryPalette">
-        <div class="pbHeader">
-          <table cellspacing="0" cellpadding="0" border="0">
-            <tbody>
-            <tr>
-              <td class="pbTitle">
-                <h3 id="id_person_company_access_title"><%=t(:label_irm_person_company_access)%></h3>
-              </td>
-              <td class="pbButton">
-                <div class="button"></div>
-              </td>
-              <td class="pbHelp">
-              </td>
-            </tr>
-            </tbody>
-          </table>
-        </div>
-        <div id="id_company_access" class="pbBody">
-          <div id="person" class="datatable" style="width:100%;">
-          </div>
-          <!-- Begin company access table -->
-            <%= datatable("person",url_for(:controller=>"irm/company_accesses",:action=>"get_data",:person_id=>@person.id),
-                              [{:key=>"company_name",:label=>t(:label_irm_person_company),:sortable=>true}])%>
-          <!-- End company access table -->
-        </div>
-        <div class="pbFooter secondaryPalette">
-        <div class="bg"></div>
-        </div>
-      </div>
-    </div>
 </div>
 
 <div id="id_person_system_access" class="bRelatedList">
