--- a/app/views/irm/people/_new_form.html.erb
+++ b/app/views/irm/people/_new_form.html.erb
@@ -46,26 +46,83 @@
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_person_last_name)%></label></td>
               <td class="dataCol"><%=f.text_field :last_name%></td>
-              <td class="labelCol"><%= t(:label_irm_identity_language_code) %></td>
-              <td class="dataCol"><%= f.select(:language_code, selectable_languages) %></td>
+              <td class="labelCol"><label><%=t(:label_irm_person_organization)%></label></td>
+              <td class="dataCol"><%= f.blank_select(:organization_id,available_organization,{},{:required=>true,}) %></td>
             </tr>
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_person_first_name)%></label></td>
               <td class="dataCol"><%=f.text_field :first_name, :required=>true%></td>
+              <td class="labelCol"><label><%=(t :label_irm_person_region_code)%></label></td>
+              <td class="dataCol"><%=f.blank_select :region_code,available_region,{},{:required=>true,:id=>"region_code"}%></td>
+            </tr>
+            <tr>
               <td class="labelCol"><%=(t :label_irm_person_title)%></td>
               <td class="dataCol">
                 <%=f.select :title,options_for_select(person_title,@person.title),
                                                     {},{:required=>true,:id=>"irm_person_title"}%></td>
+
+              <td class="labelCol"><label><%=(t :label_irm_person_site_group_code)%></label></td>
+
+              <td class="dataCol"><%= f.blank_select(:site_group_code,available_site_group(@person.region_code),{},
+                                    {:required=>false,
+                                     :id=>"site_group_code",
+                                     :href=>url_for(:controller=>"irm/site_groups",:action=>"get_by_region_code",:format=>"json",:region_code=>"{region_code}"),
+                                     :depend=>"region_code"
+                                     }) %></td>
             </tr>
             <tr>
-              <td class="labelCol"><label><%= t(:label_irm_identity_password)%></label></td>
-              <td class="dataCol"><%=f.password_field(:password, :size=>40,:required=>true)%></td>
+              <td class="labelCol"><%= t(:label_irm_identity_language_code) %></td>
+              <td class="dataCol"><%= f.select(:language_code, selectable_languages) %></td>
+              <td class="labelCol"><label><%=(t :label_irm_person_site_code)%></label></td>
+              <td class="dataCol"><%= f.blank_select(:site_code,available_site(@person.site_group_code),{},
+                                  {:required=>false,
+                                   :id=>"site_code",
+                                   :href=>url_for(:controller=>"irm/sites",:action=>"get_by_site_group_code",:format=>"json",:site_group_code=>"{site_group_code}"),
+                                   :depend=>"site_group_code"
+                                   }) %></td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label><%=t(:label_irm_person_notification_lang)%></label></td>
+              <td class="dataCol"><%=f.select :notification_lang,selectable_languages%></td>
+              <td class="labelCol"><label><%=t(:label_irm_person_bussiness_phone)%></label></td>
+              <td class="dataCol">
+                <%=f.text_field :bussiness_phone,:required=>true%>
+              </td>
+            </tr>
+            <tr>
+               <td class="labelCol">
+                 <label><%=t(:label_irm_person_notification_flag)%></label>
+               </td>
+               <td class="dataCol"><%=f.check_box :notification_flag,:checked => true%></td>
+               <td class="labelCol"><label><%=t(:label_irm_person_fax_number)%></label></td>
+               <td class="dataCol">
+                   <%=f.text_field :fax_number%>
+               </td>
+            </tr>
+            <tr>
+               <td class="labelCol"><label><%=t(:label_irm_person_vip_flag)%></label></td>
+               <td class="dataCol"><%=f.check_box :vip_flag%></td>
+               <td class="labelCol"><label><%=t(:label_irm_person_mobile_phone)%></label></td>
+               <td class="dataCol">
+                 <%=f.text_field :mobile_phone%>
+               </td>
+
+            </tr>
+            <tr>
+              <td class="labelCol"><label><%=t(:label_irm_person_assignment_availability_flag)%></label></td>
+              <td class="dataCol"><%=f.check_box :assignment_availability_flag%></td>
+              <td class="labelCol"><label><%=t(:label_irm_person_home_phone)%></label></td>
+              <td class="dataCol">
+                <%=f.text_field :home_phone%>
+              </td>
+            </tr>
+            <tr>
               <td class="labelCol"><%= t(:label_irm_person_template_flag) %></td>
               <td class="dataCol"><%= f.check_box(:template_flag) %></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%= t(:label_irm_identity_password_confirmation)%></label></td>
-              <td class="dataCol"><%=f.password_field(:password_confirmation, :size=>40,:required=>true)%></td>
+              <td class="labelCol"><label><%=t(:label_irm_person_home_address)%></label></td>
+              <td class="dataCol">
+                 <%=f.text_field :home_address%>
+              </td>
             </tr>
         </tbody>
       </table>
@@ -73,93 +130,24 @@
   </div>
   <div class="pbBody">
     <div id="head_2_ep" class="pbSubheader first tertiaryPalette">
-      <h3><%=t(:label_irm_person_other_info)%></h3>
+      <h3><%=t(:label_irm_person_password_info)%></h3>
     </div>
     <div class="pbSubsection">
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
-             <tr>
-                  <td class="labelCol"><label><%=t(:label_irm_person_profile)%></label></td>
-                  <td class="dataCol"><%= f.blank_select(:profile_id,available_profile,{},{:required=>true,:id=>"profile_id"})%></td>
-                  <td class="labelCol"><label><%=(t :label_irm_person_region_code)%></label></td>
-                  <td class="dataCol"><%=f.blank_select :region_code,available_region,{},{:required=>true,:id=>"region_code"}%></td>
-             </tr>
-             <tr>
-               <td class="labelCol"><label><%=(t :label_irm_person_role)%></label></td>
-               <td class="dataCol"><%=f.blank_select :role_id,available_roles,{},{:id=>"role_id"}%></td>
-               <td class="labelCol"><label><%=(t :label_irm_person_site_group_code)%></label></td>
+            <tr>
+              <td class="labelCol"><label><%= t(:label_irm_identity_password)%></label></td>
+              <td class="dataCol"><%=f.password_field(:password, :size=>40,:required=>true)%></td>
+              <td class="labelCol"></td>
+              <td class="dataCol"></td>
 
-               <td class="dataCol"><%= f.blank_select(:site_group_code,available_site_group(@person.region_code),{},
-                                    {:required=>false,
-                                     :id=>"site_group_code",
-                                     :href=>url_for(:controller=>"irm/site_groups",:action=>"get_by_region_code",:format=>"json",:region_code=>"{region_code}"),
-                                     :depend=>"region_code"
-                                     }) %></td>
-             </tr>
-             <tr>
-               <td class="labelCol"><label><%=t(:label_irm_person_organization)%></label></td>
-               <td class="dataCol"><%= f.blank_select(:organization_id,available_organization,{},{:required=>true,}) %></td>
-               <td class="labelCol"><label><%=(t :label_irm_person_site_code)%></label></td>
-                 <td class="dataCol"><%= f.blank_select(:site_code,available_site(@person.site_group_code),{},
-                                  {:required=>false,
-                                   :id=>"site_code",
-                                   :href=>url_for(:controller=>"irm/sites",:action=>"get_by_site_group_code",:format=>"json",:site_group_code=>"{site_group_code}"),
-                                   :depend=>"site_group_code"
-                                   }) %></td>
-
-
-             </tr>
-             <tr>
-                <td class="labelCol"><label><%=t(:label_irm_person_bussiness_phone)%></label></td>
-                 <td class="dataCol">
-                   <%=f.text_field :bussiness_phone,:required=>true%>
-                 </td>
-
-                 <td class="labelCol"><label><%=t(:label_irm_person_home_address)%></label></td>
-                 <td class="dataCol">
-                   <%=f.text_field :home_address%>
-                 </td>
-             </tr>
-             <tr>
-                 <td class="labelCol"><label><%=t(:label_irm_person_mobile_phone)%></label></td>
-                 <td class="dataCol">
-                   <%=f.text_field :mobile_phone%>
-                 </td>
-
-                 <td class="labelCol"><label><%=t(:label_irm_person_home_phone)%></label></td>
-                 <td class="dataCol">
-                   <%=f.text_field :home_phone%>
-                 </td>
-             </tr>
-             <tr>
-                 <td class="labelCol"><label><%=t(:label_irm_person_vip_flag)%></label></td>
-                 <td class="dataCol"><%=f.check_box :vip_flag%></td>
-
-                 <td class="labelCol"><label><%=t(:label_irm_person_fax_number)%></label></td>
-                 <td class="dataCol">
-                   <%=f.text_field :fax_number%>
-                 </td>
-
-             </tr>
-             <tr>
-               <td class="labelCol"><label>
-                     <%=t(:label_irm_person_assignment_availability_flag)%></label></td>
-                 <td class="dataCol"><%=f.check_box :assignment_availability_flag%></td>
-               <td class="labelCol">
-                 <label><%=t(:label_irm_person_notification_flag)%></label>
-               </td>
-               <td class="dataCol"><%=f.check_box :notification_flag,:checked => true%></td>
-
-             </tr>
-             <tr>
-               <td class="labelCol"><label><%=t(:label_irm_person_unrestricted_access_flag)%></label></td>
-                <td class="dataCol"><%=f.check_box :unrestricted_access_flag%></td>
-                <td class="labelCol"><label><%=t(:label_irm_person_notification_lang)%></label>
-                </td>
-                <td class="dataCol"><%=f.select :notification_lang,"<option value=\"\">--- #{t(:actionview_instancetag_blank_option)} ---</option>".html_safe +
-                                          options_from_collection_for_select(available_languages,:language_code,:wrap_description,@person.notification_lang)%></td>
-
-             </tr>
+            </tr>
+            <tr>
+              <td class="labelCol"><label><%= t(:label_irm_identity_password_confirmation)%></label></td>
+              <td class="dataCol"><%=f.password_field(:password_confirmation, :size=>40,:required=>true)%></td>
+              <td class="labelCol"></td>
+              <td class="dataCol"></td>
+            </tr>
 
         </tbody>
       </table>
@@ -203,3 +191,9 @@
   </div>
 </div>
 <% end %>
+<script type="text/javascript">
+  GY.use("cascadeselect",function(Y){
+     new Y.CascadeSelect({source: "#region_code",target:["#site_group_code","#site_code"]});
+     new Y.CascadeSelect({source: "#site_group_code",target:["#site_code"]});
+  });
+</script>
