--- a/app/views/irm/people/show.html.erb
+++ b/app/views/irm/people/show.html.erb
@@ -67,111 +67,90 @@
         <tbody>
             <tr>
               <td class="labelCol"><label><%=t(:label_irm_identity_login_name)%></label></td>
-              <td class="dataCol"><%= @person.login_name %></td>
-              <td class="labelCol"><label><%=t(:label_irm_role)%></label></td>
-              <td class="dataCol"><%= @person.role_name %></td>
+              <td class="dataCol"><%= @person.login_name%></td>
+              <td class="labelCol"><label><%=(t :label_irm_person_role)%></label></td>
+              <td class="dataCol"><%=@person[:role_name]%></td>
             </tr>
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_person_email_address)%></label></td>
-              <td class="dataCol"><%= @person.email_address%></td>
-              <td class="labelCol"><label><%=(t :label_irm_profile)%></label></td>
-              <td class="dataCol"><%= @person.profile_name%></td>
+              <td class="dataCol"><%=@person.email_address%></td>
+              <td class="labelCol"><label><%=t(:label_irm_person_profile)%></label></td>
+              <td class="dataCol"><%=@person[:profile_name]%></td>
             </tr>
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_person_last_name)%></label></td>
               <td class="dataCol"><%=@person.last_name%></td>
-              <td class="labelCol"><%= t(:label_irm_identity_language_code) %></td>
-              <td class="dataCol"><%= @person[:language_description] %></td>
+              <td class="labelCol"><label><%=t(:label_irm_person_organization)%></label></td>
+              <td class="dataCol"><%= @person[:organization_name] %></td>
             </tr>
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_person_first_name)%></label></td>
               <td class="dataCol"><%=@person.first_name%></td>
-              <td class="labelCol"><label><%=(t :label_irm_person_template_flag)%></label></td>
-              <td class="dataCol"><div><%=check_img(@person.is_a?(Irm::TemplatePerson) ? "Y":"N")%></div></td>
+              <td class="labelCol"><label><%=(t :label_irm_person_region_code)%></label></td>
+              <td class="dataCol"><%=@person[:region_name]%></td>
             </tr>
             <tr>
-              <td class="labelCol"><%= t(:label_irm_person_title) %></td>
-              <td class="dataCol"><%= @person[:title_name] %></td>
-              <td class="labelCol"><label><%=(t :label_irm_identity_last_login_at)%></label></td>
-              <td class="dataCol"><%=@person.last_login_at%></td>
+              <td class="labelCol"><%=(t :label_irm_person_title)%></td>
+              <td class="dataCol">
+                <%=@person[:title_name]%></td>
+
+              <td class="labelCol"><label><%=(t :label_irm_person_site_group_code)%></label></td>
+
+              <td class="dataCol"><%= @person[:site_group_name] %></td>
+            </tr>
+            <tr>
+              <td class="labelCol"><%= t(:label_irm_identity_language_code) %></td>
+              <td class="dataCol"><%= @person[:language_description] %></td>
+              <td class="labelCol"><label><%=(t :label_irm_person_site_code)%></label></td>
+              <td class="dataCol"><%= @person[:site_name]%></td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label><%=t(:label_irm_person_notification_lang)%></label></td>
+              <td class="dataCol"><%=@person[:notification_lang_description]%></td>
+              <td class="labelCol"><label><%=t(:label_irm_person_bussiness_phone)%></label></td>
+              <td class="dataCol">
+                <%=@person.bussiness_phone%>
+              </td>
+            </tr>
+            <tr>
+               <td class="labelCol">
+                 <label><%=t(:label_irm_person_notification_flag)%></label>
+               </td>
+               <td class="dataCol"><%=check_img(@person.notification_flag)%></td>
+               <td class="labelCol"><label><%=t(:label_irm_person_fax_number)%></label></td>
+               <td class="dataCol">
+                   <%=@person.fax_number%>
+               </td>
+            </tr>
+            <tr>
+               <td class="labelCol"><label><%=t(:label_irm_person_vip_flag)%></label></td>
+               <td class="dataCol"><%=check_img(@person.vip_flag)%></td>
+               <td class="labelCol"><label><%=t(:label_irm_person_mobile_phone)%></label></td>
+               <td class="dataCol">
+                 <%=@person.mobile_phone%>
+               </td>
+
+            </tr>
+            <tr>
+              <td class="labelCol"><label><%=t(:label_irm_person_assignment_availability_flag)%></label></td>
+              <td class="dataCol"><%=check_img(@person.assignment_availability_flag)%></td>
+              <td class="labelCol"><label><%=t(:label_irm_person_home_phone)%></label></td>
+              <td class="dataCol">
+                <%=@person.home_phone%>
+              </td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label><%=(t :label_irm_person_template_flag)%></label></td>
+              <td class="dataCol"><div><%=check_img(@person.is_a?(Irm::TemplatePerson) ? "Y":"N")%></div></td>
+              <td class="labelCol"><label><%=t(:label_irm_person_home_address)%></label></td>
+              <td class="dataCol">
+                 <%=@person.home_address%>
+              </td>
             </tr>
         </tbody>
       </table>
       </div>
-    <div class="pbSubheader tertiaryPalette">&nbsp;
-      <h3><%=t(:label_irm_person_other_info)%><span class="titleSeparatingColon"></span></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-             <tr>
-                 <td class="labelCol"></td>
-                 <td class="dataCol"></td>
-                  <td class="labelCol"><label><%=(t :label_irm_person_region_code)%></label></td>
-                  <td class="dataCol"><%=@person[:region_name]%></td>
-             </tr>
-             <tr>
-             <td class="labelCol"><label><%=t(:label_irm_person_organization)%></label></td>
-             <td class="dataCol"><%= @person[:organization_name] %></td>
-             <td class="labelCol"><label><%=(t :label_irm_person_site_group_code)%></label></td>
 
-             <td class="dataCol"><%= @person[:site_group_name] %></td>
-             </tr>
-             <tr>
-                 <td class="labelCol"></td>
-                 <td class="dataCol"></td>
-
-               <td class="labelCol"><label><%=(t :label_irm_person_site_code)%></label></td>
-                 <td class="dataCol"><%= @person[:site_name] %></td>
-
-
-             </tr>
-             <tr>
-                <td class="labelCol"><label><%=t(:label_irm_person_bussiness_phone)%></label></td>
-                 <td class="dataCol">
-                   <div><%=@person[:business_phone]%></div>
-                 </td>
-
-                 <td class="labelCol"><label><%=t(:label_irm_person_home_address)%></label></td>
-                 <td class="dataCol">
-                   <div><%=@person[:home_address]%></div>
-                 </td>
-             </tr>
-             <tr>
-                 <td class="labelCol"><label><%=t(:label_irm_person_mobile_phone)%></label></td>
-                 <td class="dataCol">
-                   <div><%=@person[:mobile_phone]%></div>
-                 </td>
-
-                 <td class="labelCol"><label><%=t(:label_irm_person_home_phone)%></label></td>
-                 <td class="dataCol">
-                   <div><%=@person[:home_phone]%></div>
-                 </td>
-             </tr>
-             <tr>
-                 <td class="labelCol"><label><%=t(:label_irm_person_vip_flag)%></label></td>
-                 <td class="dataCol"><div><%=check_img(@person[:vip_flag])%></div></td>
-                 <td class="labelCol"><label><%=t(:label_irm_person_fax_number)%></label></td>
-                 <td class="dataCol"><div><%=@person[:fax_number]%></div></td>
-             </tr>
-             <tr>
-               <td class="labelCol"><label><%=t(:label_irm_person_assignment_availability_flag)%></label></td>
-               <td class="dataCol"><div><%=check_img(@person[:assignment_availability_flag])%></div></td>
-               <td class="labelCol">
-                 <label><%=t(:label_irm_person_notification_flag)%></label>
-               </td>
-               <td class="dataCol"><div><%=check_img(@person[:notification_flag])%></div></td>
-             </tr>
-             <tr>
-               <td class="labelCol"><label><%=t(:label_irm_person_unrestricted_access_flag)%></label></td>
-               <td class="dataCol"><div><%=check_img(@person[:unrestricted_access_flag])%></div></td>
-               <td class="labelCol"><label></label></td>
-               <td class="dataCol"><div></div></td>
-             </tr>
-
-        </tbody>
-      </table>
-    </div>
     <div id="head_3_ep" class="pbSubheader first tertiaryPalette">
       <h3><%=t(:label_irm_person_approve_info)%></h3>
     </div>
@@ -223,7 +202,7 @@
         </div>
         <div id="id_system_access" class="pbBody">
           <div id="person_system_list" class="datatable" style="width:100%;">
-            <div id="id" style="display:none">
+            <div id="id" class="id" style="display:none">
               <%= link_to t(:remove), {:controller=>"uid/external_system_members",:action=>"delete_from_person",:external_system_code=>"{external_system_code}",
                                       :person_id=>@person.id},:confirm => t(:label_are_you_sure) ,
                                       :method => :delete %>
@@ -270,24 +249,17 @@
         </div>
         <div id="id_support_group" class="pbBody">
           <div id="support_group" class="datatable" style="width:100%;">
-            <div id="id" style="display:none">
+            <div id="id" class="id" style="display:none">
               <%= link_to t(:remove), {:controller=>"irm/group_members",:action=>"delete_from_person",:id=>"{id}",
                                       :person_id=>@person.id},:confirm => t(:label_are_you_sure) ,
                                       :method => :delete %>
             </div>
           </div>
           <!-- Begin company access table -->
-<<<<<<< HEAD
-            <%= datatable("support_group",url_for(:controller=>"irm/people",:action=>"get_support_group",:person_id=>@person.id),
-                              [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"40px"},
-                               {:key=>"support_group_name",:label=>t(:label_irm_support_group_name),:sortable=>true, :width=>"200px"},
-                               {:key=>"description",:label=>t(:label_irm_support_group_description),:sortable=>true, :width=>"400px"}])%>
-=======
             <%= datatable("support_group",url_for(:controller=>"irm/group_members",:action=>"get_data_from_person",:id=>@person.id),
                               [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"60px"},
                                {:key=>"name",:label=>t(:label_irm_group_name),:sortable=>true},
                                {:key=>"description",:label=>t(:label_irm_group_description),:sortable=>true}])%>
->>>>>>> opu
           <!-- End company access table -->
         </div>
         <div class="pbFooter secondaryPalette">
